fixing issue where callout shortocdes could overlap other floated elements

--- a/modules/custom/cu_shortcodes/scss/cu_shortcodes.scss
+++ b/modules/custom/cu_shortcodes/scss/cu_shortcodes.scss
@@ -427,6 +427,7 @@ div.image-caption  p:first-child {
   width:240px;
   float: right;
   margin: 0 0 40px 40px;
+  clear:both;
 }
 .feature-layout-callout img.image-square-thumbnail {
   width:110px;
